--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
 	<h1>Личный сайт студента Илья Маник</h1>
 
 	<div class="center">
-	<img src="img/photo1.jpeg">
+	<img src="photo1.jpeg">
 		<div class="box_text">
 			<p><b>Шалом плебеи</b>. Меня зовут <i>Илья Маник</i>. <br>Я недавно начал учиться программировать, написал свой сайт.</p>
 
