--- a/password_gen.html
+++ b/password_gen.html
@@ -42,9 +42,9 @@
 	<div class="header">
 		<a href="index.html">Главная</a>
 		<a href="puzzle.html">Загадки</a>
-		<a href="#">Угадайка</a>
+		<a href="guess.html">Угадайка</a>
 		<a href="english.html">Учим английский</a>
-		<a href="password_gen.html">Генератор паролей</a>
+		<a href="#">Генератор паролей</a>
 	</div>
 <div class="contentWrap">
     <div class="content">
