--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<a href="puzzle.html">Загадки</a>
 		<a href="guess.html">Угадайка</a>
 		<a href="english.html">Учим английский</a>
+		<a href="password_gen.html">Генератор паролей</a>
 	</div>
 
 	<h1>Личный сайт студента Илья Маник</h1>
@@ -25,10 +26,10 @@
 			<p>В этом мне помог IT-портал <a href="https://geekbrains.ru">GeekBrains</a></p>
 
 			<p>На этом сайте вы сможете сыграть в несколько игр, которые я написал: <br>
-		<a href="#">Главная</a>
 		<a href="puzzle.html">Загадки</a>
 		<a href="guess.html">Угадайка</a>
 		<a href="english.html">Учим английский</a>
+		<a href="password_gen.html">Генератор паролей</a>
 			</p>
 		</div>
 	</div>
