--- a/english.html
+++ b/english.html
@@ -55,10 +55,13 @@
 
 <div class="content">
 	<div class="header">
+	<div class="header">
 		<a href="index.html">Главная</a>
 		<a href="puzzle.html">Загадки</a>
 		<a href="guess.html">Угадайка</a>
 		<a href="#">Учим английский</a>
+		<a href="password_gen.html">Генератор паролей</a>
+	</div>
 	</div>
 
 <div class="contentWrap">
