--- a/guess.html
+++ b/guess.html
@@ -53,6 +53,7 @@
 		<a href="puzzle.html">Загадки</a>
 		<a href="#">Угадайка</a>
 		<a href="english.html">Учим английский</a>
+		<a href="password_gen.html">Генератор паролей</a>
 	</div>
 <div class="contentWrap">
     <div class="content">
