--- a/puzzle.html
+++ b/puzzle.html
@@ -39,6 +39,7 @@
 		<a href="#">Загадки</a>
 		<a href="guess.html">Угадайка</a>
 		<a href="english.html">Учим английский</a>
+		<a href="password_gen.html">Генератор паролей</a>
 	</div>
 
 <div class="contentWrap">
