--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	<div class="center">
 	<img src="photo1.jpeg">
 		<div class="box_text">
-			<p><b>Шалом плебеи</b>. Меня зовут <i>Илья Маник</i>. <br>Я недавно начал учиться программировать, написал свой сайт.</p>
+			<p><b>Добрейшего денёчка)</b>. Меня зовут <i>Илья Маник</i>. <br>Я недавно начал учиться писать говнокод, написал свой сайт.</p>
 
-			<p>В этом мне помог IT-портал <a href="https://geekbrains.ru">GeekBrains</a></p>
+			<p>Я прохожу обучение на портале <a href="https://geekbrains.ru">GeekBrains</a></p>
 
 			<p>На этом сайте вы сможете сыграть в несколько игр, которые я написал: <br>
 		<a href="puzzle.html">Загадки</a>
