--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div class="content">
 	<div class="header">
-		<a href="#">Главная</a>
+		<a href="index.html">Главная</a>
 		<a href="puzzle.html">Загадки</a>
 		<a href="guess.html">Угадайка</a>
 		<a href="english.html">Учим английский</a>
