--- a/english.html
+++ b/english.html
@@ -41,14 +41,14 @@
 		["mean", "иметь в виду"],
 	]
 	
-	askWords(numberwords);
+	/* askWords(numberwords);
 	
  alert("Молодец! Все слова выучены! Переходим на следующий уровень!");
  
  	
 	askWords(words);
 	
- alert("Молодец! Все слова выучены!");
+ alert("Молодец! Все слова выучены!"); */
 	</script>
 </head>
 <body>
