--- a/english.html
+++ b/english.html
@@ -30,16 +30,13 @@
 		["eight", "восемь"],
 		["nine", "девять"],
 		["ten", "десять"],
-	]
-	
-	
-	var words = [
 		["food", "еда"],
 		["bike", "велосипед"],
 		["apple", "яблоко"],
 		["do", "делать"],
-		["mean", "иметь в виду"],
+		["mean", "иметь в виду"]
 	]
+	
 	
 	/* askWords(numberwords);
 	
@@ -71,7 +68,7 @@
 			<h1>Учим английский</h1>
 
 			<div class="box">
-				<a href="#" onclick="askWords(name);"> Начать</a>
+				<a href="#" onclick="askWords(numberwords);"> Начать</a>
 			</div>
 
         </div>
